* Fixed dyn navi top position and static navi dock's height so dyn navi won't overlap static navi

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/screen.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/screen.scss
@@ -339,7 +339,7 @@ a.header {
   bottom:0;
   left:0;
   right:0;
-  height:76px;
+  height:74px;
   z-index:13;
   background:#216aa1;
   border-top:1px solid #71c3e1;
